adapter/internal/operator/gateway-api/testdata/securitypolicy-no-status-for-unknown-gateway-or-route.out.yaml
infraIR: {}
securityPolicies:
- apiVersion: apk.wso2.com/v1alpha1
  kind: SecurityPolicy
  metadata:
    creationTimestamp: null
    name: target-unknown-httproute
    namespace: envoy-gateway
  spec:
    targetRef:
      group: gateway.networking.k8s.io
      kind: HTTPRoute
      name: unknown-httproute
      namespace: envoy-gateway
  status:
    ancestors: null
- apiVersion: apk.wso2.com/v1alpha1
  kind: SecurityPolicy
  metadata:
    creationTimestamp: null
    name: target-unknown-gateway
    namespace: envoy-gateway
  spec:
    targetRef:
      group: gateway.networking.k8s.io
      kind: Gateway
      name: unknown-gateway
      namespace: envoy-gateway
  status:
    ancestors: null
xdsIR: {}
